--- a/client/index.html
+++ b/client/index.html
@@ -12,14 +12,10 @@
 	<link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/assets/css/style.css">
 
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-
 	<style type="text/css">
-	/** {
-		outline: black dotted 1px;
-	}*/
+	* {
+		outline: red dotted 1px;
+	}
 	.add_icon {
 		cursor: pointer;
 	}
@@ -65,8 +61,16 @@
 						</li>
 					</ul> -->
 					<div class="profile">
-						<a href="#/profile">
-						<img width="50px" height="50px" class="img-circle" src="./images/user_blank_profile.png"></a>
+						
+						<img width="50px" height="50px" class="img-circle" src="./images/user_blank_profile.png">
+						<div id="triangle">
+						</div>
+						<div id="profile_menu">
+							
+								<a href="#/profile"><p>My Page</p></a>
+								<p>Cart</p>
+								<p>Log In</p>
+						</div>
 					</div> 
 
 
@@ -79,7 +83,6 @@
 
 	<div class="component" ng-view="">
 	</div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/main.js"></script> <!-- Resource jQuery -->
+	
 </body>
 </html>
